===============================================================================
Changes for faraday
===============================================================================


DONE:
5/20/08 - replace new Font("Sans Serif",...) with new PhetFont(...)
5/8/08 - fix translations (ar,es,lt) that were using obsolete MessageFormat syntax
********* version 2.01.00 (21052)
********* version 2.00.04 (21033)
4/28/08 - add PhetLookAndFeel to mains
4/28/08 - pick up PhetDefaultFont fixes
4/14/08 - restore "Show Field" and "Show Electrons" features that were hidden for 2.00.01, 2.00.02 and 2.00.03
********* version 2.00.03 (20727)
4/14/08 - hide "Show Field" and "Show Electrons" features (for Archie's studies)
********* version 2.00.02 (20725)
4/14/08 - show "Show Field" feature, hide "Show Electrons" feature (for Archie's studies)
********* version 2.00.01 (20722)
4/14/08 - hide "Show Field" feature (for Archie's studies)
4/14/08 - add compile-time flags to hide "Show Field" and "show Electrons" features (for Archie's studies)
4/14/08 - set B-field to "off" by default in GeneratorModule.reset
4/14/08 - add missing call to reset() at end of constructor for GeneratorModule
********* version 2.00.00 (20682)
4/10/08 - fix "see inside" feature to handle magnet rotation that occurs with "show Earth"
********* version 1.05.15 (20599)
4/8/09 - strength slider for bar magnet and turbine both need to be constrained to integer values [504]
4/7/08 - no water is shown when turbine is spinning at 1 or 2 rpm [503]
********* version 1.05.14 (20577)
4/7/08 - add clock control panels to all modules of magnets-and-electromagnets
********* version 1.05.13 (20568)
4/7/08 - hide the slow hand on the clock animation as suggested by Kathy, for purposes of demonstration
********* version 1.05.12 (20556)
4/7/08 - hide clock control panel for all modules in magnet-and-compass and magnets-and-electromagnets
********* version 1.05.11 (20528)