@@ -128,7 +128,7 @@ public class ElectromagnetModule extends FaradayModule {
         _electromagnetModel.update();
         
         // Compass model
-        _compassModel = new Compass( _electromagnetModel );
+        _compassModel = new Compass( _electromagnetModel, getClock() );
         _compassModel.setBehavior( Compass.INCREMENTAL_BEHAVIOR );
         _compassModel.setLocation( COMPASS_LOCATION );
         model.addModelElement( _compassModel );
